--- a/material/style.css
+++ b/material/style.css
@@ -2,13 +2,12 @@
 
 body {
 	font-family: Heebo;
-	background-color: #D0D0D0;
+	width: 100%;
+	color: #414141;
 }
 
 html {
 	font-size: 16px;
-	margin: 0;
-	padding: 0;
 }
 
 /*header section*/
@@ -20,6 +19,8 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: fixed;
+	z-index: 1;
 }
 
 header #logo {
@@ -61,35 +62,40 @@ header #logo {
 }
 
 #nav a:hover {
-	background-color: #2B2B2B;
+	background-color: #414141;
 	color: white;
 }
 
 /*banner section*/
 
 .banner {
-	width: 100%;
-	position: relative;
-	top: 2rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	color: #414141;
+	background-color: #D0D0D0;
+}
+
+.banner, .keep-practicing {
+	position: relative;
+	top: 4rem;
 }
 
 .banner .image {
 	width: 60%;
+	margin: 0 1.5rem;
 }
 
 .banner .image img {
-	margin-left: 1.5rem;
 	width: 100%;
+	margin: 2rem 0;
 }
 
 .banner .info {
-	width: 40%;
+	width: 35.5%;
+	height: 16rem;
 	text-align: left;
-	margin-left: 3rem;
+	overflow: scroll;
+	margin-top: 2rem;
 }
 
 .banner .info p:first-child {
@@ -112,7 +118,7 @@ header #logo {
 .info span a {
 	text-decoration: none;
 	color: #D0D0D0;
-	padding: 8px 117px;
+	padding: 8px 26%;
 	background-color: #414141;
 	transition: background-color 0.3s ease-in-out 50ms, color 0.3s ease-in-out 50ms;
 }
@@ -121,8 +127,128 @@ header #logo {
 	background-color: #969696;
 }
 
+/*content*/
 
+content {
+	width: 100%;
+}
 
+/*section 1*/
+
+.section1row1 {
+	width: 100%;
+	margin-left: 1.5rem;
+	display: flex;
+	position: relative;
+	top: 6rem;
+}
+
+/*row1*/
+
+.row1 {
+	display: flex;
+}
+
+/*left column*/
+
+.leftimage {
+	width: 60%;
+	height: auto;
+}
+
+.leftimage img {
+	width: 100%;
+}
+
+/*right column*/
+
+.right {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	position: relative;
+	left: 3rem;
+	width: 40%;
+}
+
+.top, .bottom {
+	display: flex;
+	align-items: center;
+	width: 100%;
+}
+
+.rightimage {
+	width: 35%;
+	height: auto;
+}
+
+.rightimage img {
+	width: 100%;
+	height: auto;
+}
+
+.right .info {
+	position: relative;
+	left: 2rem;
+	width: 65%;
+}
+
+.right span {
+	font-size: 1.2rem;
+	font-weight: 500;
+	line-height: 2.5rem;
+}
+
+.right .info a {
+	line-height: 1.5rem;
+}
+
+p {
+	line-height: 1.5rem;
+	font-weight: 300;
+}
+
+/*row2*/
+
+.section1row2 {
+	position: relative;
+	top: 8.7rem;
+	margin-left: 1.5rem;
+	margin: 0;
+	padding: 0;
+}
+
+.row2 {
+	display: flex;
+	border: 1px solid black;
+	margin-left: 1.5rem;
+	justify-content: space-between;
+}
+
+.row2 .row1 {
+	width: 60%;
+	background-color: lightblue;
+}
+
+.row2 .row {
+	display: flex;
+	background-color: red;
+	width: 40%;
+}
+
+.row .image img {
+	width: 35%;
+	height: auto;
+	padding-left: 1rem;
+	
+}
+
+.row .info {
+	position: relative;
+	left: 2rem;
+	width: 65%;
+}
 
 
 
