--- a/material/style.css
+++ b/material/style.css
@@ -1,7 +1,7 @@
 /*universal styles*/
 
 body {
-	font-family: Heebo;
+	font-family: Comfortaa, sans-serif, serif;
 	width: 100%;
 	color: #414141;
 }
@@ -38,7 +38,7 @@ header #logo {
 }
 
 .logotext span:first-child {
-	font-weight: 500;
+	font-weight: 700;
 	color: #414141;
 }
 
@@ -92,7 +92,7 @@ header #logo {
 
 .banner .info {
 	width: 35.5%;
-	height: 16rem;
+	height: 18rem;
 	text-align: left;
 	overflow: scroll;
 	margin-top: 2rem;
@@ -105,7 +105,7 @@ header #logo {
 }
 
 .banner .info p{
-	font-weight:500;
+	font-weight: 700;
 	font-size: 1.2rem;
 	line-height: 1.7rem;
 }
@@ -128,127 +128,131 @@ header #logo {
 }
 
 /*content*/
+/*section1*/
 
-content {
-	width: 100%;
-}
-
-/*section 1*/
-
-.section1row1 {
-	width: 100%;
+#section1 {
 	margin-left: 1.5rem;
-	display: flex;
 	position: relative;
 	top: 6rem;
-}
-
-/*row1*/
-
-.row1 {
 	display: flex;
+	justify-content: space-between;
 }
 
 /*left column*/
 
-.leftimage {
+#columnleft {
 	width: 60%;
-	height: auto;
+	margin-right: 2rem;
+	margin-bottom: 2rem;
 }
 
-.leftimage img {
+#columnleft img {
 	width: 100%;
+	flex: 0 0 60%;
 }
 
 /*right column*/
 
-.right {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	position: relative;
-	left: 3rem;
-	width: 40%;
+#columnright {
+	width: 37%;
+	overflow: scroll;
 }
 
-.top, .bottom {
-	display: flex;
-	align-items: center;
-	width: 100%;
-}
-
-.rightimage {
-	width: 35%;
-	height: auto;
-}
-
-.rightimage img {
+#columnright img {
 	width: 100%;
 	height: auto;
+	flex: 0 0 100%;
+	min-width: 100px;
 }
 
-.right .info {
-	position: relative;
-	left: 2rem;
-	width: 65%;
-}
-
-.right span {
-	font-size: 1.2rem;
-	font-weight: 500;
-	line-height: 2.5rem;
-}
-
-.right .info a {
-	line-height: 1.5rem;
-}
-
-p {
-	line-height: 1.5rem;
-	font-weight: 300;
-}
-
-/*row2*/
-
-.section1row2 {
-	position: relative;
-	top: 8.7rem;
-	margin-left: 1.5rem;
-	margin: 0;
-	padding: 0;
-}
-
-.row2 {
-	display: flex;
-	border: 1px solid black;
-	margin-left: 1.5rem;
-	justify-content: space-between;
-}
-
-.row2 .row1 {
-	width: 60%;
-	background-color: lightblue;
-}
-
-.row2 .row {
-	display: flex;
-	background-color: red;
-	width: 40%;
-}
-
-.row .image img {
-	width: 35%;
-	height: auto;
+.imagetext {
+	width: 52.6%;
+	flex: 0 0 52.6%;
 	padding-left: 1rem;
-	
+	min-width: 100px;
 }
 
-.row .info {
-	position: relative;
-	left: 2rem;
-	width: 65%;
+.row1, .row2, .row3 {
+	display: flex;
+	flex: auto;
+	align-items: center;
+	padding: 1rem;
 }
+
+.row3 {
+	background-color: lightgray;
+	margin: 0;
+}
+
+.row1 {
+	padding-top: 0;
+}
+
+/*font styling*/
+
+.imagetext span {
+	font-size: 1.5rem;
+	font-weight: 700;
+	line-height: 2rem;
+}
+
+.imagetext p {
+	line-height: 1rem;
+	font-weight: 300;
+	padding: 0.5rem 0;
+}
+
+.imagetext a {
+	text-decoration: none;
+	color: deepskyblue;
+	line-height: 1.7rem;
+}
+
+.practice h1 {
+	font-size: 2.5rem;
+	font-weight: 500;
+	margin-top: 2rem;
+}
+
+.practice p {
+	line-height: 1rem;
+	font-weight: 300;
+	padding: 1.8rem 0 2rem 0;
+}
+
+.practice span {
+	font-weight: normal;
+	font-size: 0.9rem;
+}
+
+/*section 2*/
+
+#section2 {
+	position: relative;
+	top: 9rem;
+	background-color: #D0D0D0;
+}
+
+#section2 h1 {
+	padding: 2rem 0;
+	font-size: 2.5rem;
+	font-weight: 700;
+	text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
