--- a/material/style.css
+++ b/material/style.css
@@ -4,10 +4,62 @@ body {
 	font-family: Comfortaa, sans-serif, serif;
 	width: 100%;
 	color: #414141;
+	background-color: #F1F1F1;
 }
 
 html {
 	font-size: 16px;
+}
+
+/*font styling*/
+
+.imagetext span, .modulinfo h2{
+	font-size: 1.5rem;
+	font-weight: 700;
+	line-height: 2rem;
+}
+
+.imagetext p, .modulinfo p {
+	line-height: 1.5rem;
+	font-weight: 300;
+	padding: 0.5rem 0;
+}
+
+.imagetext a {
+	text-decoration: none;
+	color: deepskyblue;
+	line-height: 1.7rem;
+}
+
+.practice h1 {
+	font-size: 2.5rem;
+	font-weight: 500;
+	margin-top: 2rem;
+}
+
+.practice p, .videotext p {
+	line-height: 1.5rem;
+	font-weight: 300;
+	padding: 1.8rem 0 2rem 0;
+}
+
+.practice span {
+	font-weight: normal;
+	font-size: 0.9rem;
+}
+
+.modulinfo span {
+	line-height: 2.5rem;
+	font-weight: 300;
+	padding: 1rem 0;
+}
+
+.modulinfo p {
+	padding: 0;
+}
+
+.videotext span {
+	font-size: 1.5rem;
 }
 
 /*header section*/
@@ -45,6 +97,10 @@ header #logo {
 .logotext span:last-child {
 	color: grey;
 	font-weight: 400;
+}
+
+#mqimages {
+	display: none;
 }
 
 /*navigation section*/
@@ -140,25 +196,25 @@ header #logo {
 
 /*left column*/
 
-#columnleft {
+.columnleft {
 	width: 60%;
 	margin-right: 2rem;
 	margin-bottom: 2rem;
 }
 
-#columnleft img {
+.columnleft img {
 	width: 100%;
 	flex: 0 0 60%;
 }
 
 /*right column*/
 
-#columnright {
+.columnright {
 	width: 37%;
 	overflow: scroll;
 }
 
-#columnright img {
+.columnright img {
 	width: 100%;
 	height: auto;
 	flex: 0 0 100%;
@@ -188,63 +244,159 @@ header #logo {
 	padding-top: 0;
 }
 
-/*font styling*/
-
-.imagetext span {
-	font-size: 1.5rem;
-	font-weight: 700;
-	line-height: 2rem;
-}
-
-.imagetext p {
-	line-height: 1rem;
-	font-weight: 300;
-	padding: 0.5rem 0;
-}
-
-.imagetext a {
-	text-decoration: none;
-	color: deepskyblue;
-	line-height: 1.7rem;
-}
-
-.practice h1 {
-	font-size: 2.5rem;
-	font-weight: 500;
-	margin-top: 2rem;
-}
-
-.practice p {
-	line-height: 1rem;
-	font-weight: 300;
-	padding: 1.8rem 0 2rem 0;
-}
-
-.practice span {
-	font-weight: normal;
-	font-size: 0.9rem;
-}
-
 /*section 2*/
 
 #section2 {
 	position: relative;
 	top: 9rem;
 	background-color: #D0D0D0;
+	padding-bottom: 2rem;
 }
 
-#section2 h1 {
+#section2 h1, #section3 h1 {
 	padding: 2rem 0;
 	font-size: 2.5rem;
 	font-weight: 700;
 	text-align: center;
 }
 
+.modulrow1, .modulrow2 {
+	display: flex;
+	margin: 0 3.5rem;
+	width: auto;
+}
 
+.modulrow2 {
+	margin-top: 2rem;
+}
 
+.computer, .business, .modul {
+	margin: 0 1rem
+}
 
+#section2 img {
+	width: 100%;
+}
 
+.modul, .computer, .business {
+	background-color: white;
+	width: 100%
+}
 
+.modulinfo {
+	margin: 0.5rem 1rem 2rem 1rem;
+}
+
+/*section 3*/
+
+#section3 {
+    position: relative;
+	top: 9rem;
+}
+
+#cols {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	margin-left: 1.5rem;
+}
+
+.columnleft video {
+	width: 100%;
+}
+
+#section3 .row1 {
+	background-color: lightgray;
+}
+
+#section3 .row1 img {
+	padding-top: 1rem;
+}
+
+.videotext {
+	margin-top: 2rem;
+}
+
+/*footer*/
+
+#footer {
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+	top: 8rem;
+	margin: 0 1.5rem;
+	border-top: 0.5px solid lightgray;
+}
+
+.copyright, .links {
+	padding-top: 1rem;
+	padding-bottom: 4rem;
+}
+
+.links a {
+	padding: 0 0.5rem;
+}
+
+/*media queries*/
+
+@media only screen and (max-width: 480px) {
+	
+	html {
+		font-size: 14px;
+	}
+	
+	#logo, #nav {
+		display: none !important;
+	}
+	
+	#mqimages {
+		display: flex;
+		justify-content: center;
+		width: 100%;
+	}
+	
+	#mqimages img {
+		padding: 0 1rem;
+	}
+	
+	#mqimages a {
+		margin: 0 auto;
+	}
+	
+	.banner {
+		flex-direction: column;
+	}
+	
+	.banner .image {
+		width: 100%;
+		padding: 0;
+		margin: 0;
+	}
+	
+	.banner .info {
+		width: 100%;
+		margin-left: 1.5rem;
+		overflow: hidden;
+		position: relative;
+		top: -2rem;
+	}
+	
+	.infolink {
+		width: 100%;
+		height: 8px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	
+	.info span a {
+		padding: 8px 0;
+	}
+	
+	#section1, .modulrow1, .modulrow2, #cols{
+		flex-direction: column;
+	}
+}
 
 
 
